# adapter_critic

./: .gitignore  .pre-commit-config.yaml  README.md  SYSTEM_DESIGN.md  pyproject.toml
docs/: critic_prompt_v1_design.md
experiments/: __init__.py
experiments/adapter_prompt_v1/: README.md  adapter_system_prompt.txt  run_server.py  upstream_resolution.py
experiments/critic_prompt_v1/: critic_system_prompt.txt  run_server.py
experiments/v1/: __init__.py  run_server.py
experiments/v10/: README.md  run_server.py
experiments/v11/: README.md  run_server.py
experiments/v12/: README.md  run_server.py  upstream_resolution.py
experiments/v13/: README.md  run_server.py  upstream_resolution.py
experiments/v15/: README.md  __init__.py  run_server.py
experiments/v2/: README.md  __init__.py  run_server.py
experiments/v3/: README.md  __init__.py  run_server.py
experiments/v4/: README.md  __init__.py  run_server.py
experiments/v5/: README.md  __init__.py  adapter_system_prompt.txt  run_server.py
experiments/v6/: README.md  __init__.py  critic_system_prompt.txt  run_server.py
experiments/v7/: README.md  __init__.py  run_server.py
experiments/v8/: README.md  __init__.py  run_server.py
experiments/v9/: README.md  __init__.py  run_server.py
plans/: BACKBURNER.md  CHECKLIST.md  DEVLOG_CONTRACT.md  HUMAN_COMMENTS.md  IMPLEMENTER.md  PLAN.md  RISKS.md  TESTPLAN.md  VERIFIER.md  WORK.md
src/adapter_critic/: app.py  config.py  contracts.py  dispatcher.py  edits.py  health.py  http_gateway.py  logging_setup.py  prompts.py  (+8 more)
tests/: conftest.py  helpers.py
(+31 files in other folders)
