[project]
name = "adapter-critic"
version = "0.1.0"
description = "FastAPI OpenAI-compatible adapter/critic wrapper"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "httpx>=0.28.1",
  "pydantic>=2.11.7",
  "uvicorn>=0.35.0",
]

[project.scripts]
adapter-critic-server = "adapter_critic.server:main"

[dependency-groups]
dev = [
  "mypy>=1.17.1",
  "openai>=1.101.0",
  "pre-commit>=4.3.0",
  "pytest>=8.4.1",
  "ruff>=0.12.0",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/adapter_critic"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
no_implicit_optional = true
pretty = true
mypy_path = ["src"]
